# PAROS

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff_defaults.toml
.github/workflows/: ci.yml  release.yml  setup.yml  test-release.yml  voici.yml
PAROS/: __init__.py  eyephantom.py  fundscale.py
PAROS/data/: __init__.py
PAROS/data/calibration/: __init__.py
PAROS/data/calibration/Topcon/: TRC_50DX.csv  TRC_50IX.csv
PAROS/data/lenses/: __init__.py  phantom.csv
examples/: calculate_ocular_magnification.ipynb  fundus_camera_calibration.ipynb
voici/: README.md  build-environment.yml  environment.yml  simple_example.ipynb
