[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "PAROS"
description = "PARaxial Optical fundus Scaling (PAROS)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Lennart J. Pors", email = "l.j.pors@lumc.nl" },
    { name = "Jan-Willem M. Beenakker", email = "j.w.m.beenakker@lumc.nl" },
    { name = "Corné Haasjes", email = "c.haasjes@lumc.nl" },
]
keywords = ["paraxial optics", "ophthalmology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "sympy",
    "typing-extensions>=4.12.2 ; python_full_version < '3.11'",
]
requires-python = ">=3.9"
dynamic = ["version"]

[tool.hatch.envs.default]
installer = "uv"
path = ".venv"

[tool.hatch.envs.jupyter]
dependencies = ["jupyter"]

[tool.hatch.envs.jupyter.scripts]
# Run a single notebook. Run as hatch run jupyter:run-notebook <notebook>
run-notebook = "jupyter nbconvert --to notebook --inplace --execute {args}"
# Run all notebooks. Run as hatch run jupyter:run-all
run-all = [
    "run-notebook examples/calculate_ocular_magnification.ipynb",
    "run-notebook examples/fundus_camera_calibration.ipynb",
]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff_defaults.toml"

[tool.ruff.lint]
extend-ignore = [
    "B028",   # No explicit stacklevel
    "EM101",  # Raw string in exception
    "EM102",  # f-string in exception
    "N999",   # Invalid module name
    "TRY003", # Long exception messages
]

[dependency-groups]
dev = ["jupyter>=1.1.1"]
